2011-04-21  Roland Levillain  <roland@lrde.epita.fr>

	Have tools/compute_local_configurations compile.

	* tools/compute_local_configurations.cc: Add missing header
	inclusion (mln/value/int_u8.hh).
	Add copyright notice.
	* tools/Makefile.am (noinst_PROGRAMS): Add
	compute_local_configurations.

2011-04-21  Roland Levillain  <roland@lrde.epita.fr>

	Import the computation of (2D) connectivity numbers from sandbox.

	* tools/compute_local_configurations.cc: New.
	Imported from
	sandbox/inim/2009/ocr/compute_local_configurations.cc.

2010-08-20  Roland Levillain  <roland@lrde.epita.fr>

	New apps on generic skeletonization.

	* apps/generic-skel/image2d-skel-unconstrained.cc,
	* apps/generic-skel/image2d-skel-with-end-points.cc,
	* apps/generic-skel/image2d-skel.hh:
	New.
	* apps/generic-skel/test-image2d-skel-unconstrained.in,
	* apps/generic-skel/test-image2d-skel-with-end-points.in:
	New tests.
	* apps/generic-skel/Makefile.am: New.
	* apps/Makefile.am (SUBDIRS): Add generic-skel.

2011-04-12  Roland Levillain  <roland@lrde.epita.fr>

	apps/graph-morpho: Catch up with current mln::topo::is_n_face.

	* apps/graph-morpho/morpho.hh
	(trait::graph< mln::complex_image<1, G, V> >::is_vertex)
	(trait::graph< mln::complex_image<1, G, V> >::is_edge):
	Fix the return type.

2011-03-20  Roland Levillain  <roland@lrde.epita.fr>

	Use priority-driven thinning in collapse-based thinnings apps.

	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc:
	Here.

2011-03-20  Roland Levillain  <roland@lrde.epita.fr>

	Simplify curvature-based thinnings using 2- and 1-collapses apps.

	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc:
	Here.

2011-03-14  Roland Levillain  <roland@lrde.epita.fr>

	Miscellaneous changes in mesh-related operations.

	* mln/topo/is_simple_cell.hh: Add static preconditions.
	Reduce the number of pointer manipulations.